Fri Jun 24 11:02:06 2005  Chad Elliott  <elliott_c@ociweb.com>

        * bin/PerlACE/Process_Win32.pm:

          Fixed this module to work with the ACE_TEST_WINDOW environment
          variable that I added some time back.

Fri Jun 23 13:36:12 UTC 2005  Martin Corino  <mcorino@remedy.nl>

        * ace/OS_NS_Thread.cpp:
          Fixed unused 'result' variable in ACE_OS::event_init().

Fri Jun 23 13:00:12 UTC 2005  Martin Corino  <mcorino@remedy.nl>

        * tests/Process_Manual_Event_Test.cpp:
        * tests/Process_Semaphore_Test.cpp:
          Fixes for compile errors on Linux 64bit.

Fri Jun 23 10:20:12 UTC 2005  Martin Corino  <mcorino@remedy.nl>

        * ace/OS_NS_Thread.inl:
          Made sure ETIME is always returned on timeouts of
          ACE_OS::sema_timedwait and not ETIMEDOUT.

        * tests/Semaphore_Test.cpp:
          Extended platform coverage of timeout tests.

        * tests/Auto_Event_Test.cpp:
        * tests/Manual_Event_Test.cpp:
        * tests/Process_Manual_Event_Test.cpp:
        * tests/Process_Semaphore_Test.cpp:
        * tests/run_test.lst:
        * tests/tests.mpc:
          Added new tests.

Fri Jun 23 09:17:12 UTC 2005  Martin Corino  <mcorino@remedy.nl>

        * tests/INET_Addr_Test_IPV6.cpp:
        * tests/Multihomed_INET_Addr_Test_IPV6.cpp:
        * tests/SOCK_Send_Recv_Test_IPV6.cpp:
        * tests/SOCK_Test_IPV6.cpp:
          Fixed WCHAR compile problems.

Fri Jun 23 08:49:12 UTC 2005  Martin Corino  <mcorino@remedy.nl>

        * ace/OS_NS_Thread{.h .cpp .inl}:
          Extended ACE_OS::event_xxx implemtation to support platforms having
          either PThread support with Process Shared condition variables
          or POSIX semaphores with named (process shared) semaphore support
          or using the new FIFO based semaphores.
          Fixed manual_reset implementation of condition based events
          (event_pulse() did not work).

Fri Jun 23 08:49:12 UTC 2005  Martin Corino  <mcorino@remedy.nl>
