@@ -31,8 +31,8 @@ ACE_Array_Map<Key, Value>::ACE_Array_Map (InputIterator f, InputIterator l)
 #else
 template<typename Key, typename Value>
 ACE_Array_Map<Key, Value>::ACE_Array_Map (
-  ACE_Array_Map<Key, Value>::const_iterator f,
-  ACE_Array_Map<Key, Value>::const_iterator l)
+  typename ACE_Array_Map<Key, Value>::const_iterator f,
+  typename ACE_Array_Map<Key, Value>::const_iterator l)
   : size_ (l - f)
   , capacity_ (size_)
   , nodes_ (size_ == 0 ? 0 : new value_type[size_])
@@ -81,7 +81,7 @@ ACE_Array_Map<Key, Value>::swap (ACE_Array_Map<Key, Value> & map)
 template<typename Key, typename Value>
 std::pair<typename ACE_Array_Map<Key, Value>::iterator, bool>
 ACE_Array_Map<Key, Value>::insert (
-  ACE_Array_Map<Key, Value>::value_type const & x)
+  typename ACE_Array_Map<Key, Value>::value_type const & x)
 {
   // Linear insertion due to linear duplicate key search.
 
@@ -122,8 +122,9 @@ ACE_Array_Map<Key, Value>::insert (InputIterator f, InputIterator l)
 #else
 template<typename Key, typename Value>
 void
-ACE_Array_Map<Key, Value>::insert (ACE_Array_Map<Key, Value>::const_iterator f,
-                                   ACE_Array_Map<Key, Value>::const_iterator l)
+ACE_Array_Map<Key, Value>::insert (
+  typename ACE_Array_Map<Key, Value>::const_iterator f,
+  typename ACE_Array_Map<Key, Value>::const_iterator l)
 {
   this->grow (l - f);  // Preallocate storage.
 
@@ -136,7 +137,8 @@ ACE_Array_Map<Key, Value>::insert (ACE_Array_Map<Key, Value>::const_iterator f,
 
 template<typename Key, typename Value>
 void
-ACE_Array_Map<Key, Value>::erase (ACE_Array_Map<Key, Value>::iterator pos)
+ACE_Array_Map<Key, Value>::erase (
+  typename ACE_Array_Map<Key, Value>::iterator pos)
 {
   iterator const first = this->begin ();
   iterator const last = this->end ();
@@ -153,7 +155,7 @@ ACE_Array_Map<Key, Value>::erase (ACE_Array_Map<Key, Value>::iterator pos)
 template<typename Key, typename Value>
 typename ACE_Array_Map<Key, Value>::size_type
 ACE_Array_Map<Key, Value>::erase (
-  ACE_Array_Map<Key, Value>::key_type const & k)
+  typename ACE_Array_Map<Key, Value>::key_type const & k)
 {
   iterator pos = this->find (k);
 
@@ -167,8 +169,8 @@ ACE_Array_Map<Key, Value>::erase (
 template<typename Key, typename Value>
 void
 ACE_Array_Map<Key, Value>::erase (
-  ACE_Array_Map<Key, Value>::iterator first,
-  ACE_Array_Map<Key, Value>::iterator last)
+  typename ACE_Array_Map<Key, Value>::iterator first,
+  typename ACE_Array_Map<Key, Value>::iterator last)
 {
   if (this->begin () <= first && first < last && last < this->end ())
     for (iterator i = first; i != last; ++i)
@@ -184,7 +186,8 @@ ACE_Array_Map<Key, Value>::clear (void)
 
 template<typename Key, typename Value>
 typename ACE_Array_Map<Key, Value>::iterator
-ACE_Array_Map<Key, Value>::find (ACE_Array_Map<Key, Value>::key_type const & k)
+ACE_Array_Map<Key, Value>::find (
+  typename ACE_Array_Map<Key, Value>::key_type const & k)
 {
   iterator const the_end = this->end ();
 
@@ -198,7 +201,7 @@ ACE_Array_Map<Key, Value>::find (ACE_Array_Map<Key, Value>::key_type const & k)
 template<typename Key, typename Value>
 typename ACE_Array_Map<Key, Value>::const_iterator
 ACE_Array_Map<Key, Value>::find (
-  ACE_Array_Map<Key, Value>::key_type const & k) const
+  typename ACE_Array_Map<Key, Value>::key_type const & k) const
 {
   const_iterator const the_end = this->end ();
 
@@ -211,7 +214,8 @@ ACE_Array_Map<Key, Value>::find (
 
 template<typename Key, typename Value>
 void
-ACE_Array_Map<Key, Value>::grow (ACE_Array_Map<Key, Value>::size_type s)
+ACE_Array_Map<Key, Value>::grow (
+  typename ACE_Array_Map<Key, Value>::size_type s)
 {
   if (this->size () + s > this->capacity_)
     {
