@@ -1,3 +1,12 @@
+Fri Jun 24 11:36:26 2005  Ossama Othman  <ossama@dre.vanderbilt.edu>
+
+	* ace/Array_Map.cpp:
+	* ace/Array_Map.inl:
+
+	  Added missing "typename" keyword before template parameter
+	  dependent types.  Addresses VC++ 7.1/8 and Sun CC++ compile-time
+	  warnings and errors.
+
 Fri Jun 24 11:02:06 2005  Chad Elliott  <elliott_c@ociweb.com>
 
         * bin/PerlACE/Process_Win32.pm:
